--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -2,6 +2,7 @@
 		<div class="navwrap">
 		<div class="logo">
 			<a  href="/"><span class="logo38">38</span><span class="logosr">锶</span></a>
+			<span class="logobar"></span>
 		</div>
 		<div class="selectwrap">
 			<ul class="navul" role="tablist"> 
