--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="/stylesheets/base.min.css">  
 	<link rel="stylesheet" href="/stylesheets/jcrop.min.css">   
 	<link rel="stylesheet" href="/stylesheets/jquery.atwho.min.css"> 
+	<link rel="stylesheet" href="/stylesheets/jquery.qeditor.min.css"> 
 	<link rel="stylesheet" href="/stylesheets/pagesty.min.css"> 
+  	<link href="http://cdn.staticfile.org/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
 	<script src="/javascripts/jquery-min.js"></script> 
 	<script src="/javascripts/jquery-migrate-1.2.1.js"></script>
@@ -20,7 +22,11 @@
 	<script src="/javascripts/jquery.jcrop.min.js"></script>  
 	<script src="/javascripts/jquery.atwho.min.js"></script>
 	<script src="/javascripts/jquery.caret.min.js"></script> 
+	<script src="/javascripts/jquery.qeditor.min.js"></script> 
 	<script src="/javascripts/gotop.min.js"></script> 
+	<script src="/javascripts/jquery.form.js"></script> 
+
+
 	<script type="text/javascript">
 	$(document).ready(function(){
 		//初始化一个剪裁大小，左上角坐标(100,100)，右下角为(200,200)
