--- a/views/user.ejs
+++ b/views/user.ejs
@@ -28,7 +28,7 @@
 											<%}%>
 										</div>
 									</div>
-									<pre class="msg_content"><%= nearArticle[i].content %> </pre>  
+									<pre class="msg_content"><%- nearArticle[i].newcontent %> </pre>  
 								<div class="clearfix"></div>
 							</div> 
 		  		<% } %>
