--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -36,6 +36,28 @@
 	height: 64px
 }
 
+.textarea {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border linear .2s, box-shadow linear .2s;
+    -moz-transition: border linear .2s, box-shadow linear .2s;
+    -o-transition: border linear .2s, box-shadow linear .2s;
+    transition: border linear .2s, box-shadow linear .2s;
+    padding: 4px 6px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #555555;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    vertical-align: middle;
+    outline: none;
+    height: 250px;
+  }
+
 .articleitem {
 	border-bottom: 1px dashed #cda;
 	padding: 10px 20px
@@ -66,6 +88,7 @@
 .msg_content {
 	color: #333;
 	line-height: 1.8em;
+	overflow: hidden;
 	font:14px/1.5 arial, sans-serif;
 	border: 0 solid #ccc!important;
 	border-radius: 0
@@ -141,7 +164,10 @@
 	font-size: 12px;
 	text-align: center
 }
-
+.thumb{
+	padding-right: 5px;
+	float: left;
+}
 .userview a:hover {
 	background-color: rgba(74,122,170,1);
 	color: #fff;
