--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -62,6 +62,7 @@
 
 			<p><a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
 			<span class="otherlink">版权所有 © 2014 38SR.COM</span>
+			<a href="https://github.com/ForestCho/38sr" class="otherlink">源码</a>  
 			<a href="/about" class="otherlink">关于</a>  
 			<a href="/shijian" class="otherlink">成长线</a>  
 			<a href="/feedback" class="otherlink">反馈</a>   
