--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top appwrap">
+<nav class="navbar navbar-default navbar-fixed-top appwrap" id="navigate">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
