--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,4 +1,4 @@
- 		<div class="copyright">
+ 		<footer class="copyright">
  			<div id=gotopbtn>
  				<img border="0" src="/images/scrollup.png" style="height: 35px;width: 35px;">
  			</div> 
@@ -60,15 +60,16 @@
 			
 		</script>
 
-			<p><a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
-			<span class="otherlink">版权所有 © 2014 38SR.COM</span>
-			<a href="https://github.com/ForestCho/38sr" class="otherlink">源码</a>  
-			<a href="/about" class="otherlink">关于</a>  
-			<a href="/shijian" class="otherlink">成长线</a>  
-			<a href="/feedback" class="otherlink">反馈</a>   
-			<a target="_blank" href="http://weibo.com/forestcho?from=profile&wvr=5&loc=infdomain" class="otherlink">微博</a> 
-	 		<script src="https://s95.cnzz.com/stat.php?id=1253083255&web_id=1253083255" language="JavaScript" ></script>
-			</p> 
-		</div>
+			<div>
+				<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
+				<span class="otherlink">版权所有 © 2014 38SR.COM</span>
+				<a href="https://github.com/ForestCho/38sr" class="otherlink">源码</a>  
+				<a href="/about" class="otherlink">关于</a>  
+				<a href="/shijian" class="otherlink">成长线</a>  
+				<a href="/feedback" class="otherlink">反馈</a>   
+				<a target="_blank" href="http://weibo.com/forestcho?from=profile&wvr=5&loc=infdomain" class="otherlink">微博</a> 
+		 		<script src="https://s95.cnzz.com/stat.php?id=1253083255&web_id=1253083255" language="JavaScript" ></script>
+			</div> 
+		</footer>
 	</body>
 	</html>
