--- a/source/stylesheets/pagesty.css
+++ b/source/stylesheets/pagesty.css
@@ -148,11 +148,12 @@
 	white-space: nowrap;
 }
 .detail_msg_head{
-	font-size: 17px;
+	font-size: 19px;
 	color: #383838;
-	border-left: 4px solid #00a090; 
+	border-left: 4px solid #00a090;
 	padding: 8px 10px;
-	line-height: 17px; 
+	line-height: 19px;
+	height: 38px;
 }
 .no_reply_notice{
 	padding: 20px 0px;
@@ -219,7 +220,7 @@
 	background: #fff;
 	height: 100px;
 	padding: 5px;
-	border-radius: 5px;
+	border-radius: 0px 0px 5px 5px;
 }
 
 .onesentence {
@@ -227,7 +228,7 @@
 }
 
 .onesentence p {
-	font-size: 15px;
+	font-size: 16px;
 	text-indent: 2em;
 	line-height: 26px;
 }
@@ -507,6 +508,26 @@
 .item_title a:hover{  
 	color: #07695E;
 	text-decoration: underline;
+}
+
+.pagination_container{
+	width: 100%;
+	background-color: #fff;
+	margin-top: 1px;
+	border-radius: 5px 5px 0px 0px;
+}
+.pagination li a, .pagination li span {
+	background-color: #fafafa;
+	color: #999;
+	border-color: #e6e6e6;
+}
+.pagination li a:hover, 
+.pagination li span:hover, 
+.pagination li a:focus, 
+.pagination li span:focus {
+	color: #232F38;
+	background-color: #eee;
+	border-color: #ddd;
 }
 .leftreg {
 	float: left;
@@ -833,7 +854,7 @@
 .account_panel{
 	width: 100%;
 	height: 100%;
-	background-color:#f5f5f5;
+	background-color:#fff;
 	margin: 0px auto;  
 	overflow: hidden;
 }
@@ -848,26 +869,17 @@
 	background-color: #E9E7E7;
 }
 .setpanel {
-	margin-top: 20px;
-	width: 80%
+	padding: 40px 20px;
+	min-height: 400px;
 }
-
-.baseinfo input {
-	width: 50%; 
+ 
+.baseinfo form{
+	width:45%;
+} 
+.accountinfo form{
+	width:45%;
 }
-
-.baseinfo textarea {
-	width: 80%
-}
-
-.accountinfo input {
-	width: 50%;
-	border-radius: 0
-}
-
-.accountinfo textarea {
-	width: 80%
-}
+ 
 
 .settab { 
 	font-size: 16px;
@@ -897,7 +909,7 @@
 
 .curset {
 	color: #00a090!important;
-	background-color: #f5f5f5;
+	background-color: #fff;
 	padding-left: 12px;
 	padding-right: 12px;
 	padding-bottom: 0px;
@@ -943,6 +955,7 @@
 .followme,.hefollow {
 	overflow: hidden;
 	margin-top: 10px;
+	padding: 10px 10px 10px 30px
 }
 .follower a:hover{ 
 	color: #07695E;
@@ -990,7 +1003,7 @@
 	float: right;
 	font-size: 16px;
 	height: 25px;
-	line-height: 25px;
+	line-height: 40px;
 }
 
 .site_intro{
