--- a/source/stylesheets/set.css
+++ b/source/stylesheets/set.css
@@ -1,7 +1,7 @@
 .account_panel{
 	width: 100%;
 	height: 100%;
-	background-color:#f5f5f5;
+	background-color:#fff;
 	margin: 0px auto;  
 	overflow: hidden;
 }
@@ -16,26 +16,17 @@
 	background-color: #E9E7E7;
 }
 .setpanel {
-	margin-top: 20px;
-	width: 80%
+	padding: 40px 20px;
+	min-height: 400px;
 }
-
-.baseinfo input {
-	width: 50%; 
+ 
+.baseinfo form{
+	width:45%;
+} 
+.accountinfo form{
+	width:45%;
 }
-
-.baseinfo textarea {
-	width: 80%
-}
-
-.accountinfo input {
-	width: 50%;
-	border-radius: 0
-}
-
-.accountinfo textarea {
-	width: 80%
-}
+ 
 
 .settab { 
 	font-size: 16px;
@@ -65,7 +56,7 @@
 
 .curset {
 	color: #00a090!important;
-	background-color: #f5f5f5;
+	background-color: #fff;
 	padding-left: 12px;
 	padding-right: 12px;
 	padding-bottom: 0px;
