--- a/source/stylesheets/sidebar.css
+++ b/source/stylesheets/sidebar.css
@@ -12,6 +12,7 @@
 .followme,.hefollow {
 	overflow: hidden;
 	margin-top: 10px;
+	padding: 10px 10px 10px 30px
 }
 .follower a:hover{ 
 	color: #07695E;
@@ -59,7 +60,7 @@
 	float: right;
 	font-size: 16px;
 	height: 25px;
-	line-height: 25px;
+	line-height: 40px;
 }
 
 .site_intro{
