--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,10 @@
 <% include partial/header%>
 </head>
-<body class="body_index">	
+<body>	
 	<% include partial/nav %>
-	<div class="mainwrap">
-		<div class="about_head_info">
-			<h3 >关于38SR</h3>
+	<div class="mainwrap reglogin_mainwrap"> 
+		<div class="reglogin_head_info panel-heading ">
+			关于38SR
 		</div>
 			<!--		
 			<ol class="breadcrumb">
