--- a/source/stylesheets/pagesty.css
+++ b/source/stylesheets/pagesty.css
@@ -3,8 +3,7 @@
 	text-align: center
 }
 .rep_msg_box {
-	background-color: #fff;
-	margin-top: 20px;
+	background-color: #fff; 
 	border-bottom: 1px dashed #eee;
 }
 .nosignin{
@@ -92,7 +91,8 @@
 .articleitem_detail{
 	background-color: #FFF;
 	margin-top: 51px;
-	padding-bottom: 15px;
+	padding-bottom: 30px;
+	border-bottom: 1px solid #eee;
 }
 .msg_content_detail {
 	color: #333;
@@ -954,8 +954,12 @@
 }
 .followme,.hefollow {
 	overflow: hidden;
+	margin-top: 10px; 
+}
+.followlist_wrap{
+	overflow: hidden;
 	margin-top: 10px;
-	padding: 10px 10px 10px 30px
+	padding: 30px 10px 10px 30px;	
 }
 .follower a:hover{ 
 	color: #07695E;
