--- a/source/stylesheets/sidebar.css
+++ b/source/stylesheets/sidebar.css
@@ -11,8 +11,12 @@
 }
 .followme,.hefollow {
 	overflow: hidden;
+	margin-top: 10px; 
+}
+.followlist_wrap{
+	overflow: hidden;
 	margin-top: 10px;
-	padding: 10px 10px 10px 30px
+	padding: 30px 10px 10px 30px;	
 }
 .follower a:hover{ 
 	color: #07695E;
