--- a/views/follower.ejs
+++ b/views/follower.ejs
@@ -1,13 +1,12 @@
 <% include partial/header%>
 </head>
-<body class="body_index">
-	<% include partial/nav %>
-	<div class="mainwrap"> 
-		<div class="about_head_info">
-			   	<h3>Ta的粉丝<small>(<%=d.followernum %>)</small></h3>
+<body>	
+	<% include partial/nav %> 
+	<div class="mainwrap reglogin_mainwrap"> 
+		<div class="reglogin_head_info panel-heading">
+			   	Ta的粉丝<small>(<%=d.followernum %>)</small>
 		</div>
-		<div class="followlist_wrap">		    
-			<div class="hefollow">			
+		<div class="followlist_wrap">		  		
 				<%
 					var followerlist = d.followerlist;  
 					var length1 = followerlist.length;
@@ -20,8 +19,7 @@
 							<a href="/user/<%=follower.name%>" alt="<%=follower.name%>"><img src=<%= follower.photo %>></a>
 							<a href="/user/<%=follower.name%>" alt="<%=follower.name%>"><%=follower.name%></a>
 						</div>
-				<%}%>
-			</div>
+				<%}%> 
 		</div>
 		<div style="clear:both"></div>
 	</div>				
