--- a/views/shijian.ejs
+++ b/views/shijian.ejs
@@ -1,10 +1,10 @@
 <% include partial/header%>
 </head>
-<body class="body_index">	
+<body>	
 	<% include partial/nav %>
-	<div class="mainwrap"> 
-		<div class="about_head_info">
-			<h3 >38SR成长录</h3>
+	<div class="mainwrap reglogin_mainwrap"> 
+		<div class="reglogin_head_info panel-heading ">
+			38SR成长录
 		</div> 
 		<div class="shijianpanel">   
 					<div id="timewrap">
