--- a/source/stylesheets/sidebar.css
+++ b/source/stylesheets/sidebar.css
@@ -11,7 +11,7 @@
 }
 .followme,.hefollow {
 	overflow: hidden;
-	margin-top: 10px; 
+	margin-top: 5px; 
 }
 .followlist_wrap{
 	overflow: hidden;
@@ -48,6 +48,7 @@
 .follower_title{
 	 font-size: 18px; 
 	 margin-top: 15px; 
+	 height: 33px;
 	 border-bottom: 2px solid #DCDDD9; 
 } 
 
@@ -55,10 +56,52 @@
 	border-bottom: 2px solid #00a090;
 	padding: 5px 3px;
 	position: relative;
+	height: 33px;
 	margin-bottom: -2px;
 	display: inline-block;
 	color: #555;
 } 
+.fansuserlink{
+	width: 100%;
+	height: 40px;
+	display: block;
+}
+.fansuserlink:hover{
+	background-color: #F0F0F0;
+}
+.followerwrap{
+	height: 40px;
+	width: 100%;
+	padding: 5px 5px; 
+	line-height: 18px;
+	float: left;
+	text-align: center;
+	font-size: 12px;
+	border-bottom: 1px solid #eee;
+}
+.followerwrap .imagewrap{
+	width: 30px;
+	height: 30px;
+	display: block;
+	margin: 0 auto;
+	border-radius: 30px;
+	display: inline-block;
+	float: left;
+}
+.followerwrap .namewrap{
+	display: inline-block;
+	float: left;
+	height: 30px;
+	margin-left: 20px;
+	line-height: 30px;
+}
+.followerwrap img{
+	width: 30px;
+	height: 30px;
+	display: block;
+	margin: 0 auto;
+	border-radius: 30px;
+}
 .more_follower{
 	color:#747C81;
 	float: right;
